@@ -15,7 +15,7 @@ filename = debian
 match = ^(?!t/[^/]+/)[^/]+~$
 
 [PodWeaver]
-[PkgVersion]
+[OurPkgVersion]
 [Git::Check]
 ;changelog = debian/changelog
 
