@@ -7,6 +7,8 @@ use Modern::Perl;
 use File::Slurp 9999.17;
 use Run::Parts::Common;
 
+# VERSION generated by DZP::OurPkgVersion
+
 =encoding utf8
 
 =head1 SYNOPSIS
