@@ -6,6 +6,8 @@ use Modern::Perl;
 use Exporter::Easy ( EXPORT => [qw[lines chomped_lines]] );
 use Scalar::Util qw(blessed);
 
+# VERSION generated by DZP::OurPkgVersion
+
 =encoding utf8
 
 =head1 SYNOPSIS
