@@ -5,6 +5,8 @@ package Run::Parts::Debian;
 use Modern::Perl;
 use Run::Parts::Common;
 
+# VERSION generated by DZP::OurPkgVersion
+
 =encoding utf8
 
 =head1 SYNOPSIS
