@@ -7,6 +7,8 @@ use autodie;
 use Taint::Util;
 use Run::Parts::Common;
 
+# VERSION generated by DZP::OurPkgVersion
+
 =encoding utf8
 
 =head1 SYNOPSIS
