@@ -13,6 +13,9 @@ Revision history for Run-Parts
 
         Fix Perl::Critic warning "Don't modify $_ in list functions"
 
+        Consider Modern::Perl as ok for
+        Perl::Critic::Policy::TestingAndDebugging::RequireUseStrict
+
 0.06    2013-07-22 20:47:16+02:00
 
         Bump Module::Build requirement to 0.4004 for test_requires.
